--- a/index.html
+++ b/index.html
@@ -35,38 +35,38 @@
             </div>
 
         </div>    
-        <section class="section">
+        <section class="section__card-container">
 
-            <div class="section-card section__grow">
-                <figure class="section-card__img">
+            <div class="section__card section__grow">
+                <figure class="section__card__img">
                    <img src="./assets/img/illustration-grow-together.svg" alt="grow Together ilustration">
                 </figure>
 
-                <div class="section-card__info">
-                    <h2 class="section-card__title">Grow Together</h2>
-                    <p class="section-card__text">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+                <div class="section__card__info">
+                    <h2 class="section__card__title">Grow Together</h2>
+                    <p class="section__card__text">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
                 </div>
             </div>
 
-            <div class="section-card section__flowing">
-                <figure class="section-card__img">
+            <div class="section__card section__flowing">
+                <figure class="section__card__img">
                    <img src="./assets/img/illustration-flowing-conversation.svg" alt="Flowing conversation ilustration">
                 </figure>
 
-                <div class="section-card__info">
-                    <h2 class="section-card__title">Flowing Conversations</h2>
-                    <p class="section-card__text">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+                <div class="section__card__info">
+                    <h2 class="section__card__title">Flowing Conversations</h2>
+                    <p class="section__card__text">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
                 </div>
             </div>
 
-            <div class="section-card section__users">
-                <figure class="section-card__img">
+            <div class="section__card section__users">
+                <figure class="section__card__img">
                    <img src="./assets/img/illustration-your-users.svg" alt="Your Ussers ilustration">
                 </figure>
 
-                <div class="section-card__info">
-                    <h2 class="section-card__title">Your Users</h2>
-                    <p class="section-card__text">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+                <div class="section__card__info">
+                    <h2 class="section__card__title">Your Users</h2>
+                    <p class="section__card__text">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
                 </div>
             </div>
 
